hphp/test/zend/bad/ext/reflection/tests/ReflectionExtension_constructor_error.php
<?php
$obj = new ReflectionExtension();
$test = $obj instanceof ReflectionExtension;
var_dump($test);
?>
==DONE==
